# PokemonGoBot

./: CMakeLists.txt  build.cmd
data/: Pokemon - POGO owned.csv  comprehensive_dps.csv  legacy_moves.csv  poke_genie_export.csv  pokemons.txt
data/pve-charge-moves/: Bug.txt  Dark.txt  Dragon.txt  Electric.txt  Fairy.txt  Fighting.txt  Fire.txt  Flying.txt  Ghost.txt  Grass.txt  Ground.txt  Ice.txt  Normal.txt  Poison.txt  Psychic.txt  Rock.txt  Steel.txt  Water.txt
data/pve-fast-moves/: Bug.txt  Dark.txt  Dragon.txt  Electric.txt  Fairy.txt  Fighting.txt  Fire.txt  Flying.txt  Ghost.txt  Grass.txt  Ground.txt  Ice.txt  Normal.txt  Poison.txt  Psychic.txt  Rock.txt  Steel.txt  Water.txt
src/: legacyMoves.h  main.cpp  moves.cpp  moves.h  pokemons.cpp  pokemons.h  types.h  utils.cpp  utils.h
